--- a/flaskr/flaskr/templates/page_template.html
+++ b/flaskr/flaskr/templates/page_template.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -17,10 +20,78 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
+<script type=text/javascript>
+  $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+</script>
+
+
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/page.css') }}">
 
 <link rel=stylesheet type=text/css href="{{ css_file }}">
 
+<script type="text/javascript" src="{{ js_file }}"></script>
+
+
+
+<style>
+
+    #main-container {
+    padding:0;
+    margin:0;
+}
+
+#main-row {
+    height:100vh;
+}
+
+#nav-sidebar {
+    height:100vh;
+    width:250px;
+    background-color:#222222;
+    top:0;
+    left:0;
+    position:fixed;
+}
+
+#nav-sidebar-ul {
+    width:100%;
+    display:block;
+    list-style-type: none;
+    padding:0;
+}
+
+.sidebar-li {
+    height:50px;
+    width:100%;
+    color:white;
+    text-align:left;
+    left:0;
+    text-decoration: none;
+    background: none;
+    padding:20px;
+    display:flex;
+    align-items: center;
+}
+
+.sidebar-li:hover {
+    background:#777777;
+}
+
+.sidebar-a {
+    text-align:left;
+    left:0;
+    text-decoration: none;
+    background-color: none;
+    color:#ffffff;
+    pointer-event:none;
+}
+
+
+.main-content {
+    margin-left:300px;
+    position:relative;
+}
+</style>
 
 
 <head>
@@ -29,12 +100,12 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="main-container">
     <div class="row" id="main-row">
         <div id="nav-sidebar">
             <ul id="nav-sidebar-ul" class="sidebar-nav">
             {% for tab in tabs_d %}
-                <li><a class="sidebar-a" href="{{tab.route}}">{{ tab.name }}</a></li>
+                <li class="sidebar-li"><a class="sidebar-a" href="{{tab.route}}">{{ tab.name }}</a></li>
             {% endfor %}
             </ul>
         </div>
