--- a/flaskr/flaskr/templates/response/faculty_query_response.html
+++ b/flaskr/flaskr/templates/response/faculty_query_response.html
@@ -1,1 +1,11 @@
-{{ faculty_name }}
+<h1>{{ faculty_name }}</h1>
+
+<img src="{{ faculty_img }}">
+
+<p>{{ faculty_email }}</p>
+
+<p>{{ department }}</p>
+
+<p>{{ l_expertise }}</p>
+
+<p>{{ description }}</p>
