show more grants, faculty to grants matching, reorganized css and js files

--- a/flaskr/flaskr/templates/manual_grant.html
+++ b/flaskr/flaskr/templates/manual_grant.html
@@ -1,6 +1,7 @@
 <style>
 #manual-grant-form {
   height:100%;
+  width:70%;
 }
 </style>
 
@@ -36,3 +37,5 @@
   <button type="submit" id="form-submit" class="btn btn-primary">Submit</button>
   <p id="form-submission-text" style="display:none;"></p>
 </form>
+
+<div id="top-k-faculty-matches-container"></div>
