--- a/flaskr/flaskr/templates/response/top_k_similar_faculty.html
+++ b/flaskr/flaskr/templates/response/top_k_similar_faculty.html
@@ -1,31 +1,3 @@
-<style>
-.faculty-matches-container {
-    display:block;
-}
-.faculty-card {
-    display:block;
-    width:100%;
-    margin-bottom:3vh;
-    height:auto;
-    overflow:auto;
-}
-.faculty-card-left {
-    //float:left;
-    //width:70%;
-}
-.faculty-card-right {
-    float:right;
-    margin-left:2vw;
-    margin-right:2vw;
-    margin-top:3vh;
-    margin-bottom:1vh;
-}
-
-hr {
-	border-top: 1px dashed #8c8b8b;
-}
-</style>
-
 <div class="faculty-matches-container">
     {% for faculty in faculty_matches %}
     <hr>
@@ -33,7 +5,7 @@ hr {
     <div class="faculty-card">
         <div class="faculty-card-right">
             <!--<img src="http://placehold.it/200x200">-->
-            <img src="{{faculty.faculty_img_url}}">
+            <img src="{{faculty.faculty_img_url}}" class="faculty-card-img">
         </div>
         <div class="faculty-card-left">
             <!--Should link to the faculty's page-->
