--- a/flaskr/flaskr/templates/response/k_faculty.html
+++ b/flaskr/flaskr/templates/response/k_faculty.html
@@ -1,6 +1,8 @@
-<div class="faculty-matches-container">
-    {% for faculty in faculty_matches %}
+<!--<div class="faculty-matches-container">-->
+    {% for faculty in faculty_l %}
+    {% if is_faculty_matching %}
     <hr>
+    {% endif %}
     <!--can use as faculty card-->
     <div class="faculty-card">
         <div class="faculty-card-right">
@@ -9,7 +11,11 @@
         </div>
         <div class="faculty-card-left">
             <!--Should link to the faculty's page-->
+            {% if is_faculty_matching %}
             <h3>{{loop.index}}) <a href="{{faculty.faculty_site_url}}" target="_blank">{{faculty.faculty_name}}</a> ({{faculty.dist}})</h3>
+            {% else %}
+            <h3><a href="{{faculty.faculty_site_url}}" target="_blank">{{faculty.faculty_name}}</a></h3>
+            {% endif %}
             <h4>{{faculty.department}}</h4>
             {% if (faculty.description == None) %}
             No data on VCResearch. (Refer to their personal webpage)
@@ -21,4 +27,4 @@
     </div>
     {% endfor %}
 
-</div>
+<!--</div>-->
