--- a/flaskr/flaskr/templates/response/k_grants.html
+++ b/flaskr/flaskr/templates/response/k_grants.html
@@ -3,45 +3,52 @@
     <div class="grant-card-top">
         <!--grant title and link-->
         <div style="width:100%;">
-            <a href={{grant[4]}} target="_blank">
-                <h4 class="grant-card-title">{{grant[0]}}</h4>
-            </a>
-            {% if grant[3] == None %}
-            <div class="grant-card-amount">Deadline: Unspecified</div>
+            {% if grant.dist is defined %}
+            <h4 class="grant-card-title">{{loop.index}}) <a href={{grant.grant_info_url}} target="_blank">{{grant.grant_title}}</a> ({{grant.dist}})</h4>
             {% else %}
-            <div class="grant-card-amount">Deadline: {{grant[3]}}</div>
+            <h4 class="grant-card-title"><a href={{grant.grant_info_url}} target="_blank">{{grant.grant_title}}</a></h4>
+            {% endif %}
+
+            {% if grant.grant_closing_date == None %}
+            <div class="grant-card-deadline">Deadline: Unspecified</div>
+            {% else %}
+            <div class="grant-card-deadline">Deadline: {{grant.grant_closing_date}}</div>
             {% endif %}
         </div>
 
         <!--sponsor-->
-        <div class="grant-card-sponsor">{{grant[5]}}</div>
+        <div class="grant-card-sponsor">{{grant.grant_sponsor}}</div>
 
         <!--grant amount-->
-        {% if (grant[6] == "0" or grant[6] == None) and (grant[7] == "0" or grant[7] == None) %}
+        {% if (grant.grant_award_floor == "0" or grant.grant_award_floor == None)
+                and (grant.grant_award_ceiling == "0" or grant.grant_award_ceiling == None) %}
         <div>No amount specified</div>
-        {% elif grant[6] == grant[7] %}
-        <div>${{grant[6]}}</div>
-        {% elif (grant[6] == "0" or grant[6] == None)%}
-        <div>$0 - ${{grant[7]}}</div>
-        {% elif (grant[7] == "0" or grant[7] == None)%}
-        <div>${{grant[6]}} - </div>
+        {% elif grant.grant_award_floor == grant.grant_award_ceiling %}
+        <div>${{grant.grant_award_floor}}</div>
+        {% elif (grant.grant_award_floor == "0" or grant.grant_award_floor == None)%}
+        <div>$0 - ${{grant.grant_award_ceiling}}</div>
+        {% elif (grant.grant_award_ceiling == "0" or grant.grant_award_ceiling == None)%}
+        <div>${{grant.grant_award_floor}} - </div>
         {% else %}
-        <div>${{grant[6]}} - ${{grant[7]}}</div>
+        <div>${{grant.grant_award_floor}} - ${{grant.grant_award_ceiling}}</div>
         {% endif %}
 
 
     </div>
     <div class="grant-card-desc">
         <span class="read-more">
-            {% if (grant[1] == None) %}
+            {% if (grant.grant_description == None) %}
                 ''
             {% else %}
-                {{grant[1]}}
+                {{grant.grant_description}}
             {% endif %}
         </span>
     </div>
+
+    {% if show_faculty_matches %}
     <div class="grant-card-view-matches-container">
         <a class="grant-card-view-matches">View faculty matches</a>
     </div>
+    {% endif %}
 </div>
 {% endfor %}
