--- a/flaskr/flaskr/static/css/page.css
+++ b/flaskr/flaskr/static/css/page.css
@@ -11,6 +11,7 @@
     overflow:auto;
     width:100%;
     margin:0;
+    min-height:100vh;
 }
 
 #nav-sidebar {
@@ -69,4 +70,5 @@
 .main-content {
     margin-left:300px;
     position:relative;
+    margin-bottom:10vh;
 }
