--- a/flaskr/flaskr/templates/response/faculty_query_response.html
+++ b/flaskr/flaskr/templates/response/faculty_query_response.html
@@ -1,13 +1,5 @@
-<h1>{{ faculty_name }}</h1>
-
-<img src="{{ faculty_img }}">
-
-<p>{{ faculty_email }}</p>
-
-<p>{{ department }}</p>
-
-<p>{{ l_expertise }}</p>
-
-<p>{{ description }}</p>
+<div class="faculty-card-container">
+    {{ faculty_card_html|safe }}
+</div>
 
 {{ grant_matches_html|safe }}
