manual faculty search, css changes, reogranizing code, commenting, db on duplicate key update, show more/show less

--- a/flaskr/flaskr/static/css/page.css
+++ b/flaskr/flaskr/static/css/page.css
@@ -67,6 +67,11 @@
     color:#ffffff;
 }
 
+.list-bullet {
+    margin-left:4px;
+    color:#fdb71d;
+}
+
 .main-content {
     margin-left:300px;
     position:relative;
