--- a/flaskr/flaskr/templates/manual_grant.html
+++ b/flaskr/flaskr/templates/manual_grant.html
@@ -1,11 +1,8 @@
 <style>
-#manual-grant-form {
-  height:100%;
-  width:70%;
-}
+
 </style>
 
-<h2>Manual Grant Insertion</h2>
+<h2>Individual Grant Matching</h2>
 
 <form id="manual-grant-form">
 <div class="form-group">
