--- a/flaskr/flaskr/templates/page_template.html
+++ b/flaskr/flaskr/templates/page_template.html
@@ -53,7 +53,7 @@
         <div id="nav-sidebar">
             <ul id="nav-sidebar-ul" class="sidebar-nav">
             {% for tab in tabs_d %}
-                <li class="sidebar-li"><a class="sidebar-a" href="{{tab.route}}"><i class="material-icons">chevron_right</i> {{ tab.name }}</a></li>
+                <li class="sidebar-li"><a class="sidebar-a" href="{{tab.route}}"><i class="material-icons list-bullet">chevron_right</i> {{ tab.name }}</a></li>
             {% endfor %}
             </ul>
         </div>
