--- a/flaskr/flaskr/static/css/manual_grant.css
+++ b/flaskr/flaskr/static/css/manual_grant.css
@@ -1,3 +1,25 @@
 #manual-grant-form {
     margin-left:1vw;
+    height:100%;
+    width:70%;
+}
+
+#top-k-faculty-matches-container {
+    margin:auto;
+    width:70vw;
+}
+
+.faculty-card {
+    //width:70vw;
+    height:auto;
+    box-shadow: 5px 5px 5px #888888;
+    margin:auto;
+    margin-top:2vh;
+    margin-bottom:2vh;
+    padding-top:2vh;
+    padding-bottom:2vh;
+    padding-left:2vw;
+    padding-right:2vw;
+    background-color:#FFFFFF;
+    overflow:auto;
 }
