implementing search for grants

--- a/flaskr/flaskr/static/css/grant_search.css
+++ b/flaskr/flaskr/static/css/grant_search.css
@@ -4,6 +4,15 @@
     margin-bottom:5vh;
 }
 
+#grant-selector {
+    display:inline-block;
+    width:300px;
+}
+
 .faculty-card {
     border-top: 1px dashed #8c8b8b;
+}
+
+#response-container {
+
 }
