--- a/flaskr/flaskr/templates/index.html
+++ b/flaskr/flaskr/templates/index.html
@@ -1,1 +1,7 @@
-<h2>Under construction</h2>
+<h2>Made by the Berkeley Institute for Data Science: Data Science for Social Good (BIDS DSSG) Spring 2017 team</h2>
+
+<h4>Problem:</h4>
+The Berkeley Research Development Office (BRDO) wanted a tool to automatically gather research grants and match those grants with faculty members.
+
+<h4>Our solution:</h4>
+This website, the grants we have scraped, and the matching methods we have used.
