--- a/flaskr/flaskr/templates/manual_faculty.html
+++ b/flaskr/flaskr/templates/manual_faculty.html
@@ -7,6 +7,9 @@
     <small id="grantSmallText" class="form-text text-muted">Feel free to list keywords or write in sentences</small>
 </div>
 
+  <label for="num-matches">Number of grants to find:</label>
+  <input type="number" min="1" id="num-matches" class="form-control" style="width:100px; margin-bottom:10px;">
+
   <button type="submit" id="form-submit" class="btn btn-primary">Submit</button>
   <p id="form-submission-text" style="display:none;"></p>
 </form>
