--- a/flaskr/flaskr/templates/manual_grant.html
+++ b/flaskr/flaskr/templates/manual_grant.html
@@ -8,12 +8,12 @@
 <div class="form-group">
   <label for="inputGrantTitle">Grant Title</label>
   <input type="text" class="form-control" id="inputGrantTitle" name="inputGrantTitle" aria-describedby="grantTitle" placeholder="Enter grant title">
-  <small id="grantSmallText" class="form-text text-muted">Easily the most important part! Full title please!</small>
 </div>
 
 <div class="form-group">
   <label for="inputDescription">Grant Description</label>
   <textarea class="form-control" id="inputDescription" name="inputDescription" rows="3"></textarea>
+  <small id="grantSmallText" class="form-text text-muted">Easily the most important part! Full description please!</small>
 </div>
 
 <div class="form-group">
